# CPP-Coding-Adventures

./: .gitignore  .ninja_deps  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  build.ninja  cmake_install.cmake  main.cpp  projects.cpp
.cmake/api/v1/reply/: cache-v2-e8d3c9eeaf65833d8ba7.json  codemodel-v2-a81ede305b37fe69e19c.json  index-2025-11-24T02-56-50-0564.json  target-my_app-Debug-db9263934a8e52a12e34.json  target-screen-Debug-a7257cc1505c217c61be.json
TUI/: CMakeLists.txt  main.cpp
